# cyber-garden-2025-flutter

./: LICENSE  README.md  pubspec.yaml
android/app/: build.gradle.kts
app_lints/: pubspec.yaml
app_lints/lib/: dart.yaml  flutter.yaml
app_logic/: pubspec.yaml
app_logic/lib/src/: callibri_controller.dart  callibri_readings.dart  key_mouse_functions.dart
app_ui/: pubspec.yaml
app_ui/lib/: app_ui.dart  app_ui_debug.dart  chart_draw.dart
app_ui/lib/src/: custom_app_bar.dart  custom_list.dart  flutter.dart  legacy.dart  utils.dart  virtual_input.dart
app_ui/test/: app_ui_test.dart
device_info_ffi/: .metadata  jnigen.yaml  pubspec.yaml
device_info_ffi/android/: build.gradle  settings.gradle
device_info_ffi/example/: README.md  pubspec.yaml
device_info_ffi/example/lib/: main.dart
device_info_ffi/lib/: device_info_ffi.dart  device_info_ffi_platform_interface.dart
device_info_ffi/lib/src/: device_info.dart  device_info_android.dart  device_info_default.dart  device_info_linux.dart  device_info_platform.dart  device_info_windows.dart  jni_bindings.dart  types.dart
ios/Runner.xcodeproj/: project.pbxproj
layout/: pubspec.yaml
layout/lib/: layout.dart
layout/lib/src/: align.dart  flex.dart  layout.dart  padding.dart  sliver.dart  sliver_clip.dart  sliver_fractional_translation.dart  sliver_header.dart  sliver_transform.dart
lib/: app.dart  callibri_controller.dart  custom_list.dart  flutter.dart  main.dart
lib/theme/: theme.dart
linux/: CMakeLists.txt
linux/flutter/: generated_plugins.cmake
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner/Configs/: AppInfo.xcconfig
material/: pubspec.yaml
material/lib/: material.dart  material_color_utilities.dart  material_shapes.dart
neurosdk2/: CHANGELOG.md  LICENSE  README.md  pubspec.yaml
neurosdk2/android/: build.gradle  proguard-rules.pro  settings.gradle
neurosdk2/darwin/: neurosdk2.podspec
neurosdk2/darwin/Classes/: AFullSensor.h  AFullSensor.mm  AFullSensorProtected.h  BrainBit2Impl.h  BrainBit2Impl.mm  BrainBitBlackImpl.h  BrainBitBlackImpl.mm  BrainBitImpl.h  BrainBitImpl.mm  CallibriImpl.h  CallibriImpl.mm  Constants.h  Constants.m  EventHolder.h  EventHolder.m  Neurosdk2Plugin.h  Neurosdk2Plugin.m  (+8 more)
neurosdk2/example/: README.md  pubspec.yaml
neurosdk2/lib/: amp_mode_mixin.dart  brain_bit_2_sensor.dart  brain_bit_black.dart  brain_bit_sensor.dart  callibri_sensor.dart  cmn_types.dart  constants.dart  event_channel_stream_wrapper.dart  fpg_mixin.dart  mems_mixin.dart  neurosdk2.dart  pigeon_messages.g.dart  ping_neuro_smart_mixin.dart  scanner.dart  sensor.dart  sensors_field.dart
neurosdk2/linux/: CMakeLists.txt  neurosdk2_plugin.cc  neurosdk2_plugin_private.h
neurosdk2/pigeons/: host_native_api.dart
neurosdk2/windows/: CMakeLists.txt  event_holder.cpp  neurosdk2_plugin.cpp  neurosdk2_plugin.h  neurosdk2_plugin_c_api.cpp  utils.cpp
neurosdk2/windows/include/: constants.h  event_holder.h  utils.h
neurosdk2/windows/include/neurosdk2/: cmn_type.h  neurosdk2_plugin_c_api.h  sdk_api.h
neurosdk2/windows/neuro_dll/: neurosdk2-x32.lib  neurosdk2-x64.lib
neurosdk2/windows/pigeon_messages/: pigeon_messages.g.cpp  pigeon_messages.g.h
neurosdk2/windows/test/: neurosdk2_plugin_test.cpp
shapes/: analysis_options.yaml  pubspec.yaml
shapes/lib/: material_shapes.dart  shapes.dart
shapes/test/: material_shapes_test.dart  shapes_test.dart
tool/: copy.bara.sky  copybara.ps1
windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
windows/runner/: Runner.rc
(+261 files in other folders)
